kubernetes/prod/node-exporter.yaml
---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: prod
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9100'
    spec:
      containers:
      - name: node-exporter
        image: quay.io/prometheus/node-exporter:v1.11.1
        args: ["--path.rootfs=/host", "--path.udev.data=/host/run/udev/data"]
        ports:
        - name: metrics
          containerPort: 9100
          hostPort: 9100
          protocol: TCP
        resources:
          limits:
            memory: 64Mi
        volumeMounts:
        - name: root
          mountPath: /host
          readOnly: true
      hostNetwork: true
      hostPID: true
      tolerations:
      - effect: NoSchedule
        operator: Exists
      - effect: NoExecute
        operator: Exists
      volumes:
      - name: root
        hostPath:
          path: /

# ---

# would be nice, but cannot be enforced by flannel
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: node-exporter
#   namespace: prod
# spec:
#   podSelector:
#     matchLabels:
#       app: node-exporter
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: prometheus
#     ports:
#     - protocol: TCP
#       port: 9100
