kubernetes/prod/prometheus.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prod
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v3.15.0
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--storage.tsdb.path=/prometheus/"
        - "--storage.tsdb.retention.time=7d"
        ports:
        - containerPort: 9090
          name: http
        volumeMounts:
        - name: config
          mountPath: /etc/prometheus
          readOnly: true
        - name: storage
          mountPath: /prometheus
        resources:
          limits:
            memory: 1Gi
      volumes:
      - name: config
        configMap:
          name: prometheus
      - name: storage
        persistentVolumeClaim:
          claimName: prometheus

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prod
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
