kubernetes/prod/traefik.yaml
---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: prod
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      serviceAccountName: traefik
      containers:
      - name: traefik
        image: traefik:v3.7.9
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        ports:
        - name: http
          containerPort: 8000
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: config-static
          mountPath: /etc/traefik
          readOnly: true
        # - name: config-dynamic
        #   mountPath: /etc/traefik/dynamic
        #   readOnly: true
        - name: certs
          mountPath: /var/traefik/certs
        - name: tmp
          mountPath: /tmp
        resources:
          limits:
            memory: 64Mi
      volumes:
      - name: config-static
        configMap:
          name: traefik-static
      # - name: config-dynamic
      #   configMap:
      #     name: traefik-dynamic
      - name: certs
        persistentVolumeClaim:
          claimName: traefik-certs
      - name: tmp
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: prod
  labels:
    app: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  externalTrafficPolicy: Local
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
