kubernetes/prod/ntfy.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: prod
  labels:
    app: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
      containers:
      - name: ntfy
        image: binwiederhier/ntfy:v2.23
        args: ["serve"]
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: /etc/ntfy
          readOnly: true
        - name: storage
          mountPath: /var/lib/ntfy
        resources:
          limits:
            memory: 64Mi
      volumes:
      - name: config
        configMap:
          name: ntfy
      - name: storage
        persistentVolumeClaim:
          claimName: ntfy

---

apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: prod
  labels:
    app: ntfy
spec:
  selector:
    app: ntfy
  ipFamilyPolicy: PreferDualStack
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: zeroducks
spec:
  ingressClassName: traefik
  rules:
  - host: ntfy.zeroducks.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              name: http
