kubernetes/prod/pihole.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: prod
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2026.09.0
        ports:
        - containerPort: 80
          name: http
        - containerPort: 53
          protocol: TCP
          name: dns-tcp
        - containerPort: 53
          protocol: UDP
          name: dns-udp
        volumeMounts:
        - name: storage
          mountPath: /etc/pihole
        resources:
          limits:
            memory: 64Mi
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: pihole

---

apiVersion: v1
kind: Service
metadata:
  name: pihole-http
  namespace: prod
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ipFamilyPolicy: PreferDualStack
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: zeroducks
spec:
  ingressClassName: traefik
  rules:
  - host: pihole.zeroducks.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-http
            port:
              name: http

---

apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: prod
  labels:
    app: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: dns-tcp
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: dns-udp
